# unsound

./: .gitignore  Cargo.toml  LICENSE.md  README.md
param_derive/: Cargo.toml
param_derive/src/: lib.rs
src/: app.rs  audio.rs  delay.rs  engine.rs  env.rs  files.rs  host.rs  input.rs  lib.rs  main.rs  param.rs  params.rs  pattern.rs  sampler.rs  seq.rs  state.rs  ui.rs  view.rs
src/ui/: editor.rs  state.rs
src/vibe/: env.rs  mod.rs  sampler.rs  seq.rs  synth.rs
src/view/: context.rs  editor.rs  pattern.rs
tests/: integration_test.rs
